--- a/static/html/default/templates/inventario/principal.html
+++ b/static/html/default/templates/inventario/principal.html
@@ -1,6 +1,6 @@
 <style type="text/css">
             body{
-                background: url(../static/img/banner.png) no-repeat;
+                background: url(../static/img/banner.jpg) no-repeat;
                 background-position: bottom right;
             }
 </style>
