--- a/static/html/default/templates/template_nofixed.html
+++ b/static/html/default/templates/template_nofixed.html
@@ -73,7 +73,7 @@
                 
 
                 /* INBOX */
-                setInterval(function(){
+                /*setInterval(function(){
 
                     var uri = "/nymsa/modulo/inboxPendientes";
                     $.post(uri, {}, function(resp){
@@ -82,7 +82,7 @@
 
                     },"json");
 
-                }, 500);
+                }, 500);*/
 
                 var messages_handler = new url_handler();
                 messages_handler.initialize();
@@ -134,7 +134,7 @@
             
             function ver_detalle_producto(){
 
-                window.open('/{systemModuleName}/inventario/detalle_de_producto?estilo=' + $('#navBusquedaProducto').val() , '_blank')
+                window.open('/{systemModuleName}/inventario/detalle_de_producto?estilo=' + $('#navBusquedaProducto').val() , '_blank');
             }
         </script>
         <div>
@@ -152,7 +152,7 @@
                     <a class="element" href="/{systemModuleName}/inventario/segmentacion"><i class="icon-list"></i> Segmentación</a>
                     <a class="element" href="/{systemModuleName}/inventario/proveedores"><i class="icon-user-2"></i> Proveedores</a>
                     <a class="element" href="/{systemModuleName}/inventario/bodegas"><i class="icon-box"></i> Bodegas</a>
-                    <a class="element" href="/{systemModuleName}/inventario/nuevo_producto"><i class="icon-basket"></i> Catálogo</a>
+                    <a class="element" href="/{systemModuleName}/inventario/nuevo_producto"><i class="icon-basket"></i> Productos</a>
                     <a class="element" href="/{systemModuleName}/inventario/traslados"><i class="icon-tab"></i> Traslados</a>
                     <!--<a class="element" href="/{systemModuleName}/inventario/orden_compra"><i class="icon-clipboard"></i> Compras</a>-->
                     <div class="element">
